# lottery-archive

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy_pages.yml  unit_tests.yml  update_at.yml  update_de.yml  update_eu.yml
at/lotto_6aus45/: results.csv
de/lotto_6aus49/: results.csv
eu/euromillions/: results.csv
public/: index.html
scripts/: check_integrity.py  draw_utils.py  fetch_euromillions.py  fetch_lotto_at_6aus45.py  fetch_lotto_de_6aus49.py  generate_page.py  git_utils.py  http_utils.py  update_all.py
tests/: helpers.py  test_draw_utils.py  test_fetch_at.py  test_fetch_de.py  test_fetch_euromillions.py  test_generate_page.py  test_git_utils.py  test_http_utils.py  test_integrity.py  test_update_all.py
